Fixed scaling and front page on mobile

--- a/scss/home.scss
+++ b/scss/home.scss
@@ -1,7 +1,7 @@
 .parallax-container {
-    min-height: 380px;
     line-height: 0;
     height: auto;
+    min-height:420px;
     color: rgba(255, 255, 255, .9);
 
     .section {
